--- a/package.json
+++ b/package.json
@@ -1,77 +1,42 @@
 {
-  "name": "ngx-perfect-scrollbar",
-  "description": "Angular wrapper library for Perfect Scrollbar",
-  "bugs": "https://github.com/zefoy/ngx-perfect-scrollbar/issues",
-  "version": "10.1.1",
-  "license": "MIT",
-  "private": true,
+  "name": "ng-perfect-scrollbar",
+  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "lint": "ng lint",
-    "start": "ng serve app",
-    "build": "ng build lib",
-    "deploy": "deploy-to-git",
-    "prepare": "ng build lib --prod",
-    "publish": "npm publish ./dist/lib",
-    "predeploy": "rimraf ./dist/app && mkdirp ./dist/app"
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
-  "tslint": {
-    "extends": "./tslint.json"
-  },
-  "stylelint": {
-    "extends": "./stylelint.json"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/zefoy/ngx-perfect-scrollbar.git"
-  },
-  "config": {
-    "deployToGit": {
-      "repository": "git@github.com:zefoy/ngx-perfect-scrollbar.git",
-      "branch": "gh-pages",
-      "folder": "dist/app",
-      "script": "ng build app --prod -- --base-href=ngx-perfect-scrollbar --delete-output-path=false",
-      "commit": "Publishing $npm_package_version",
-      "user": {
-        "name": "ZEF Devel",
-        "email": "devel@zef.fi"
-      }
-    }
-  },
+  "private": true,
   "dependencies": {
-    "@angular/cdk": "^10.0.0",
-    "@angular/common": "^10.0.0",
-    "@angular/compiler": "^10.0.0",
-    "@angular/core": "^10.0.0",
-    "@angular/flex-layout": "10.0.0-beta.32",
-    "@angular/platform-browser": "^10.0.0",
-    "@angular/platform-browser-dynamic": "^10.0.0",
-    "perfect-scrollbar": "^1.5.0",
-    "resize-observer-polyfill": "^1.5.0"
+    "@angular/animations": "^16.2.0",
+    "@angular/common": "^16.2.0",
+    "@angular/compiler": "^16.2.0",
+    "@angular/core": "^16.2.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
+    "@angular/forms": "^16.2.0",
+    "@angular/platform-browser": "^16.2.0",
+    "@angular/platform-browser-dynamic": "^16.2.0",
+    "@angular/router": "^16.2.0",
+    "perfect-scrollbar": "^1.5.5",
+    "resize-observer-polyfill": "^1.5.1",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.0",
-    "@angular-devkit/build-ng-packagr": "^0.1000.0",
-    "@angular/cli": "^10.0.0",
-    "@angular/compiler-cli": "^10.0.0",
-    "@types/node": "^12.12.0",
-    "codelyzer": "^6.0.0",
-    "core-js": "^3.6.0",
-    "cpx": "^1.5.0",
-    "deploy-to-git": "^0.1.0",
-    "mkdirp": "^1.0.0",
-    "ng-packagr": "^10.0.0",
-    "rimraf": "^3.0.0",
-    "rxjs": "^6.6.0",
-    "stylelint": "^13.6.0",
-    "stylelint-config-standard": "^20.0.0",
-    "stylelint-order": "^4.1.0",
-    "terser": "^5.0.0",
-    "ts-node": "^8.10.0",
-    "tsickle": "^0.39.0",
-    "tslint": "^6.1.0",
-    "typescript": "~3.9.0",
-    "watch": "^1.0.0",
-    "zone.js": "^0.10.0"
+    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular/cli": "~16.2.0",
+    "@angular/compiler-cli": "^16.2.0",
+    "@types/jasmine": "~4.3.0",
+    "jasmine-core": "~4.6.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-packagr": "^16.2.0",
+    "typescript": "~5.1.3"
   }
 }
