--- a/projects/harvest/ng-perfect-scrollbar/package.json
+++ b/projects/harvest/ng-perfect-scrollbar/package.json
@@ -1,12 +1,26 @@
 {
   "name": "@harvest/ng-perfect-scrollbar",
-  "version": "0.0.1",
+  "version": "16.1.0",
+  "license": "MIT",
+  "private": false,
   "peerDependencies": {
-    "@angular/common": "^16.2.0",
-    "@angular/core": "^16.2.0"
+    "@angular/common": ">=16.1.0",
+    "@angular/core": ">=16.1.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
+  "bugs": {
+    "url": "https://git.ikilote.net/typescript/json2html/-/issues"
+  },
+  "homepage": "https://git.ikilote.net/typescript/json2html",
+  "keywords": [
+    "typescript",
+    "angular",
+    "perfect-scrollbar"
+  ]
 }
