ng update @angular/cli@17 @angular/core@17
The installed Angular CLI version is outdated.
Installing a temporary Angular CLI versioned 17.3.8 to perform the update.
✔ Packages successfully installed.
Using package manager: npm
Collecting installed dependencies...
Found 24 dependencies.
Fetching dependency metadata from registry...
    Updating package.json with dependency @angular-devkit/build-angular @ "17.3.8" (was "16.2.14")...
    Updating package.json with dependency @angular/cli @ "17.3.8" (was "16.2.14")...
    Updating package.json with dependency @angular/compiler-cli @ "17.3.11" (was "16.2.12")...
    Updating package.json with dependency ng-packagr @ "17.3.0" (was "16.2.3")...
    Updating package.json with dependency typescript @ "5.4.5" (was "5.1.6")...
    Updating package.json with dependency @angular/animations @ "17.3.11" (was "16.2.12")...
    Updating package.json with dependency @angular/common @ "17.3.11" (was "16.2.12")...
    Updating package.json with dependency @angular/compiler @ "17.3.11" (was "16.2.12")...
    Updating package.json with dependency @angular/core @ "17.3.11" (was "16.2.12")...
    Updating package.json with dependency @angular/forms @ "17.3.11" (was "16.2.12")...
    Updating package.json with dependency @angular/platform-browser @ "17.3.11" (was "16.2.12")...
    Updating package.json with dependency @angular/platform-browser-dynamic @ "17.3.11" (was "16.2.12")...
    Updating package.json with dependency @angular/router @ "17.3.11" (was "16.2.12")...
    Updating package.json with dependency zone.js @ "0.14.7" (was "0.13.3")...
UPDATE package.json (1575 bytes)
✔ Packages successfully installed.
** Executing migrations of package '@angular/cli' **

▸ Replace usages of '@nguniversal/builders' with '@angular-devkit/build-angular'.
  Migration completed (No changes made).

▸ Replace usages of '@nguniversal/' packages with '@angular/ssr'.
  Migration completed (No changes made).

▸ Replace deprecated options in 'angular.json'.

--- a/angular.json
+++ b/angular.json
@@ -58,10 +58,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ng-perfect-scrollbar:build:production"
+              "buildTarget": "ng-perfect-scrollbar:build:production"
             },
             "development": {
-              "browserTarget": "ng-perfect-scrollbar:build:development"
+              "buildTarget": "ng-perfect-scrollbar:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -69,7 +69,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng-perfect-scrollbar:build"
+            "buildTarget": "ng-perfect-scrollbar:build"
           }
         },
         "test": {
